<resources>
    <string name="app_name">TP1_Mobile</string>
    <string name="nom">Entrez votre nom</string>
    <string name="age">Entrez votre age</string>
    <string name="prenom">Entrez votre prénom</string>
    <string name="telephone">Entrez votre numéro de téléphone</string>
    <string name="email">Entrez votre adresse email</string>
    <string name="competence">Entrez votre compétence</string>
    <string name="valider">Valider</string>
    <string name="ageLabel">Age</string>
    <string name="nomLabel">Nom</string>
    <string name="prenomLabel">Prénom</string>
    <string name="telephoneLabel">Téléphone</string>
    <string name="emailLabel">Email</string>
    <string name="competenceLabel">Compétence</string>
    <string name="changerCouleur">Changer la couleur</string>

</resources>